--- a/Estilo Apartados/StyleTablas.css
+++ b/Estilo Apartados/StyleTablas.css
@@ -15,14 +15,17 @@ table {
 td, th{
     border: solid 1px #000000;
     padding: 5PX;
+    color: rgb(162, 162, 162);
 }
 
 tbody tr{
-    background-color: #c9bfb8;
+    background: #0101217b;
+	backdrop-filter: blur(0.4rem);
 }
 
 tr:nth-child(even){
-    background-color: #96948b;
+    background: #0101217b;
+	backdrop-filter: blur(0.4rem);
 }
 
 td:nth-child(n + 3),
@@ -31,21 +34,24 @@ th:nth-child(n + 3){
 }
 
 tbody tr:hover{
-    background-color: #4464f5 ;
+    background: #01010f7b;
+	backdrop-filter: blur(0.4rem);
+    cursor: pointer;
 }
 
 
 thead {
-    background-color: #04112c;
-    color: rgb(255, 255, 255);
+    background: #0101217b;
+	backdrop-filter: blur(0.4rem);
     position: sticky;
     top: 64px;
     z-index: 100;
 }
 
 caption {
-    background-color: #04112c;
-    color: rgb(255, 255, 255);
+    background: #0101217b;
+	backdrop-filter: blur(0.4rem);
+    color: rgb(200, 200, 200);
     font-size: 2em;
 }
 
@@ -53,19 +59,20 @@ table td button {
     background: #fafafa00;
     backdrop-filter: blur(0.4rem);
     border-radius: 10%;
-    color: rgb(0, 0, 0);
+    color: rgb(184, 183, 183);
     margin: 5px auto;
     width: 100%;
     height: 50%;
     box-shadow: 0 2px 5px rgb(0, 0, 0);
-    font-weight:bolder;
     z-index: 0;
     
 }
 
 table td button:hover{
-    background-color: #04112c;
-    color: rgb(255, 255, 255);
+    background: #0101217b;
+	backdrop-filter: blur(0.4rem);
+    color: rgb(200, 200, 200);
+    cursor: pointer;
 }
 
 .tamañoImgPedidos{
@@ -88,7 +95,8 @@ table td button:hover{
     }
     
     tr:nth-child(even){
-        background-color: #96948b;
+        background: #0101217b;
+	backdrop-filter: blur(0.4rem);
     }
     
     td:nth-child(n + 3),
@@ -117,7 +125,7 @@ table td button:hover{
         background: #fafafa00;
         backdrop-filter: blur(0.4rem);
         border-radius: 10%;
-        color: rgb(0, 0, 0);
+        color: rgb(200, 200, 200);
         margin: 5px auto;
         width: 100%;
         height: 50%;
