--- a/Estilo Apartados/estiloRegistroN.css
+++ b/Estilo Apartados/estiloRegistroN.css
@@ -10,7 +10,6 @@ body{
     background-size:contain;
     background-attachment: fixed;
     background-color: #050577;
-
 }
 
 .excepcionRegistro{
@@ -37,7 +36,7 @@ body{
     background: #2b2d332e ;
     backdrop-filter: blur(0.4rem);
     color: rgb(196, 196, 196);
-    width: 40%;
+    min-width: 50%;
     border-radius: 10px;
     overflow: hidden;
     font-size: 15px;
@@ -47,7 +46,7 @@ body{
 }
 
 .form-container .login-container {
-width: 80%;
+min-width: 60%;
 height: 100%;
 margin: 0 auto;
 
@@ -164,6 +163,7 @@ input {
      border-radius: 5px;
      text-transform: uppercase;
      cursor: pointer;
+     font-size: 11px;
 }
 
 .btn.btn-login{
@@ -179,6 +179,7 @@ input {
 .btn.btn-Facebook {
  background-color: #030322;
  color: white;
+ font-size: 10px;
 }
 
 .btn.btn-Facebook:hover{
@@ -189,6 +190,7 @@ input {
  background-color: rgb(204, 202, 202);
  color: black;
  border:solid 1px #ccc;
+ font-size: 10px;
 } 
 
 .btn.btn-Google:hover {
@@ -196,34 +198,239 @@ input {
 }
 
 
+.contPanelInferior{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
 
  
 
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1200px) {
     .form-container{
-        width: 95%;
+        min-width: 50%;
+        height: 70%;
     }
     
     .form-container .login-container{
-        width: 400px;
+        min-width: 30%;
         margin: 0 auto;
     }
 
     .form-container .welcome-screen-container {
         width: 40%;
     }
+
+    .contPanelInferior{
+        margin-left: 20%;
+        margin-right: 20%;
+    }
 } 
 
-@media screen and (max-width: 800px) {
 
-    .form-container .welcome-screen-container {
-        width: 0;
-    }
-        
-    .form-container .login-container {
-       width: 350px;
-    }
+@media screen and (max-width: 900px) {
+    
+
+.excepcionRegistro{
+    margin: auto;
+    width: 30%;
+    display: flex;
+    justify-content: center;  
+    font-weight: bold;
+    border-radius: 5%;  
+    backdrop-filter: blur(0.4rem);
+    margin-top: 0%;
+}
+
+.btnExcepcion{
+    backdrop-filter: blur(0.1rem);
+    background: #03470d51;
+    color: rgb(195, 194, 194);
+    font-size: .7em; 
+    margin-top: 0%;
+    cursor: pointer;
+}
+
+.form-container{
+    background: #2b2d332e ;
+    backdrop-filter: blur(0.4rem);
+    color: rgb(196, 196, 196);
+    min-width: 20%;
+    border-radius: 10px;
+    overflow: hidden;
+    font-size: 12px;
+    height: 65%;
+    display: flex;
+    align-items: center;
+}
+
+.form-container .login-container {
+min-width: 80%;
+height: 100%;
+margin: 0 auto;
 
 }
+
+
+
+
+.bloqueUno {
+    display: flex;
+}
+
+.bloqueDos {
+    display: flex;
+}
+
+.bloqueTres {
+    display: flex;
+
+}
+
+.bloid{
+    margin-left:  15px;
+    width: 80%;
+    font-size: 12px;
+}
+
+
+.form-container .login-container > h2 {
+    text-align: center;
+    font-size: 1.7em;
+    margin-top: 5px;
+}
+
+.contenedorLogo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+
+.estiloLogoInicioSesion {
+    width: 4.8em;
+    height: 4.8em;
+    border-radius: 50%;
+    display: flex;
+}
+
+input {
+    background: #8784847b ;
+    backdrop-filter: blur(0.4rem);
+    color: rgb(204, 202, 202);
+    font-size: 13px;
+    
+}
+
+.form-container .login-container >p,
+.form-container .login-container >span{
+     text-align: center;
+     color: #979595;
+}
+
+.form-container .login-container label{
+    display: block;
+    font-weight: bold;
+    padding: 2px 0;
+}
+
+.form-container .login-container input.input {
+  display: block;  
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  border:solid 1px #ccc;
+  border-radius: 5px;
+}
+
+.form-container .login-container input.input:focus {
+    outline:solid 2px #ffffffc8 ;
+}
+
+.form-container .login-container .options {
+    display: flex;
+    justify-content:  space-between;
+    align-items: center ;
+}
+
+.form-container  a {
+    color: #979595 ;
+    text-decoration: none;
+}
+
+.form-container  a:hover {
+    color: #0099ff;
+    font-weight: bold;
+}
+
+.form-container .login-container .proveedores{
+    display: flex;
+   flex-direction: column;
+   gap: 10px;
+   text-align: center;
+   margin-top: 30px;
+
+}
+
+.contPanelInferior{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.btn{
+    border:none;
+     padding: 8px 0;
+     width: 100%;
+     font-weight: bolder;
+     display: block;
+     border-radius: 5px;
+     text-transform: uppercase;
+     cursor: pointer;
+     font-size: 9px;
+}
+
+.btn.btn-login{
+    background-color: rgb(21, 20, 20);
+    color: rgb(181, 176, 176);
+    
+}
+
+.btn.btn-login:hover {
+    background-color: #222223;
+}
+
+.btn.btn-Facebook {
+ background-color: #030322;
+ color: white;
+ font-size: 9px;
+}
+
+.btn.btn-Facebook:hover{
+    background-color:#050538;
+}
+
+.btn.btn-Google {
+ background-color: rgb(204, 202, 202);
+ color: black;
+ border:solid 1px #ccc;
+ font-size: 9px;
+} 
+
+.btn.btn-Google:hover {
+    background-color: rgb(201, 201, 201);
+}
+
+}
+
+
+@media only screen and (max-width: 768px) {
+    @media only screen and (-webkit-min-device-pixel-ratio: 2), 
+       only screen and (min--moz-device-pixel-ratio: 2), 
+       only screen and (-o-min-device-pixel-ratio: 2/1), 
+       only screen and (min-resolution: 192dpi), 
+       only screen and (min-resolution: 2dppx) 
+}
+
 
