--- a/Estilo Apartados/estiloResetPassword.css
+++ b/Estilo Apartados/estiloResetPassword.css
@@ -62,6 +62,7 @@ input {
     backdrop-filter: blur(0.4rem);
     color: rgb(204, 202, 202);
     font-size: 17px;
+    margin: 3px auto;
 
 }
 
@@ -157,6 +158,7 @@ input {
 .alerta{
     color: rgb(190, 189, 189);
     font-weight: bold;
+    text-align: center;
 }
 
 @media screen and (max-width: 742px) {
