Se ajustan condiciones de registro, no se pueden duplicar campos como Numero de identificacion, email y telefono, funcionando correctamente

--- a/Estilo Apartados/estiloRegistroN.css
+++ b/Estilo Apartados/estiloRegistroN.css
@@ -21,15 +21,16 @@ body{
     border-radius: 5%;  
     backdrop-filter: blur(0.1rem);
     margin-top: 0%;
+    color: rgb(236, 236, 236);
 }
 
 .btnExcepcion{
-    backdrop-filter: blur(0.1rem);
-    background: #03470d51;
-    color: rgb(195, 194, 194);
     font-size: 1.2em; 
     margin-top: 0%;
     cursor: pointer;
+    color: rgb(225, 225, 225);
+    background: #2b2d332e ;
+    backdrop-filter: blur(0.4rem);
 }
 
 .form-container{
@@ -52,6 +53,10 @@ margin: 0 auto;
 
 }
 
+.excepcionesRegistro {
+    font-size: 20px;
+    text-align: center;
+}
 
 
 
@@ -169,6 +174,7 @@ input {
 .btn.btn-login{
     background-color: rgb(21, 20, 20);
     color: rgb(181, 176, 176);
+    margin: 6px auto;
     
 }
 
